--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
 #root {
   max-width: 1440px;
+  box-sizing: border-box;
+  overflow: hidden;
+  width: 100%;
   margin: 0 auto;
-  /* padding: 2rem; */
-  /* text-align: center; */
 }
 
 .logo {
