--- a/src/styles/Login.scss
+++ b/src/styles/Login.scss
@@ -1,3 +1,71 @@
-.login{
-    color: red
+.login {
+  // max-width: 1440px;
+  main {
+    padding: 0 67px;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 169px;
+
+    .left {
+      flex: 4;
+      img {
+        width: 600px;
+        height: 337.57px;
+      }
+    }
+    .right {
+      flex: 6;
+
+      h1 {
+        color: #213f7d;
+        font-size: 40px;
+      }
+      p {
+        color: #545f7d;
+        font-size: 20px;
+      }
+      form {
+        margin-top: 40px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        input {
+          box-sizing: border-box;
+          width: 100%;
+          height: 50px;
+          border: 1px solid #e5e5e5;
+          border-radius: 5px;
+          padding: 0 20px;
+          margin-bottom: 20px;
+
+          &:focus{
+            outline: 1px solid #39cdcc;
+          }
+        }
+        p {
+          color: #39cdcc;
+          font-size: 12px;
+        }
+        button {
+          width: 100%;
+          height: 50px;
+          border: 0;
+          border-radius: 5px;
+          background: #39cdcc;
+          color: #fff;
+          font-size: 14px;
+          font-weight: bold;
+          cursor: pointer;
+
+          &:hover{
+            background: #2ab2b1;
+          }
+        }
+      }
+    }
+  }
 }
