--- a/src/styles/Dashboard.scss
+++ b/src/styles/Dashboard.scss
@@ -1,3 +1,9 @@
 .dashboard{
-    margin: 120px 0 0 320px ;
+    margin: 120px 50px 0 320px ;
+
+    .widget{
+        display: flex;
+        justify-content: space-between;
+        gap: 20px;
+    }
 }
