--- a/src/styles/Sidebar.scss
+++ b/src/styles/Sidebar.scss
@@ -29,6 +29,26 @@
             color: #213F7D;
             margin-top: 22px;
         }
+        h4{
+            margin-top: 2rem;
+            text-transform: uppercase;
+            font-size: 14px;
+        }
+        ul{
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+            list-style: none;
+            justify-items: flex-start;
+            margin: 0;
+            padding: 0;
+
+            li{
+                display: flex;
+                gap: 10px;
+                cursor: pointer;
+            }
+        }
     }
     
 }
